--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # MongoDB Connection
 MONGODB_URI="mongodb+srv://shvishal009:Vishal1252@cluster0.ryzkrdl.mongodb.net/communication_tracker?retryWrites=true&w=majority&appName=Cluster0"
-VITE_API_BASE_URL=https://calendar-kueplo356-vishalsh-devs-projects.vercel.app/api
+VITE_API_BASE_URL=https://calendar-app-backend-silk.vercel.app/api/
